# DiscreteTreeFlows

./: .gitignore  README.md  build_comprehensive_dataset.py  environment.yml  explore_dataset_size.py  pyproject.toml  requirements.txt  run_pipeline.py  test_full_pipeline.py  test_node_encoder.py  validate_pipeline.py
benchmarks/: BLOCKERS.md  EXTERNAL.md  README_TABLE.md  __init__.py  fit_params.py  generation.py  make_table.py  run_table.py  task_data.py  track_a.py  validity.py
benchmarks/adapters/: __init__.py  branch_length.py  sequence.py
benchmarks/external_adapters/: artreeformer_sample.py  phylovae_sample.py
benchmarks/heldout/: __init__.py  (+2 more)
dataloaders/: __init__.py  collate.py  tree_dataset.py
notebooks/: eda.ipynb
scripts/: covid_extract_spike.py  embed_tree.py  eval_single_tree.py  eval_test_set.py  generate_tree.py  group_sources.py  plot_train_log.py  precompute_plm.py  precompute_ref_rates.py  prepare_covid_geo.py  prepare_evescape.py  prepare_h3n2_temporal.py  prepare_master_pool.py  run_all_groups.py  slurm_artreeformer.sh  slurm_baselines.sh  slurm_covid_extract.sh  slurm_covid_pipeline.sh  slurm_covid_train.sh  slurm_eval.sh  slurm_h3n2_pipeline.sh  slurm_h3n2_train.sh  slurm_phylovae.sh  slurm_pipeline_all.sh  slurm_precompute.sh  slurm_precompute_all.sh  slurm_precompute_ref_rates.sh  slurm_train.sh  split_fasta_by_date.py  train.py
src/: dataset.py  full_pipeline.py  networks.py  reference_process.py  tree_state.py
tests/: test_dataloader.py  test_networks.py  test_reference_process.py  test_tree_encoder.py  test_tree_state.py
(+37 files in other folders)
