[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "treesbm"
version = "0.1.0"
description = "Tree-Valued Schrödinger Bridge Matching for protein evolution forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TreeSBM Contributors"}]
keywords = ["protein-evolution", "phylogenetics", "generative-models", "schrodinger-bridges"]

dependencies = [
    "fair-esm==2.0.0",
    "pastml==1.9.52",
    "ete3==3.1.3",
    "torch-geometric==2.4.0",
    "biopython==1.83",
    "numpy==1.26.0",
    "pandas==2.1.0",
    "scipy==1.11.0",
    "torch>=2.0",
    "pyyaml==6.0",
    "tqdm==4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black==23.11.0",
    "ruff==0.1.5",
]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99
target-version = "py310"
select = ["E", "F", "W"]
